# travel-tales

./: .env  .gitignore  PIPELINE_RECON_REPORT.md  README.md  TRAVELTALES-SETUP.md  app.db  codex-prompt.txt  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  supabase-schema.sql  tailwind.config.ts  trip_intent_debug  tsconfig.app.json  tsconfig.json
backend/: db.py  main.py  requirements.txt
backend/models/: __init__.py  album.py  photo.py  user.py
backend/routes/: auth.py  photos.py
backend/services/: ai_service.py
backend/tests/: test_auth.py  test_health.py  test_upload.py
backend/utils/: config.py  security.py
docs/: step_c_notes.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  AppLayout.tsx  index.css  main.tsx
image-ranking-pipeline/: .gitignore
image-ranking-pipeline/out_lab_manual/: manual_dedupe_check.py
image-ranking-pipeline/tests/: test_dedupe.py  test_diversity.py  test_quality.py  test_quality_lab.py
integrations/traveltales_engine/: README.md  bundle_manifest.json  sync_bundle.py
labs/categories/: README.md
labs/dedupe/: runner.py
out_lab/: gen_summary.py  quality.jsonl  summary_by_bucket.csv  summary_by_bucket.md  summary_by_image.csv
out_lab_manual/: gallery.py  make_quality_gallery.py  manual_m1_m2_check.py  manual_quality_check.py  quality.jsonl  quality_gallery.html
server/: main.py  requirements.txt  s3_client.py
src/: App.tsx  index.css  vite-env.d.ts
tests/: test_categories_lab.py  test_dedupe_lab.py  test_io.py  test_quality.py  test_quality_lab.py
(+128 files in other folders)
